added news page, child and more on home page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,14 @@ html {
   scrollbar-width: none; /* Firefox */
 }
 
+html::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+.snap-y {
+  scroll-snap-type: y proximity;
+}
+
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
